<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.habitevent.ViewHabitEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <TextView
                android:id="@+id/viewHabitEventTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Habit Event Title"
                android:gravity="center"
                android:fontFamily="@font/rubik_bold"
                android:textSize="24dp"
                android:textColor="@color/blue"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_marginTop="36dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/habitEventDateFormatTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="YYYY-mm-DD"
                android:gravity="center"
                android:fontFamily="@font/rubik"
                android:textSize="12dp"
                android:textColor="@color/blue"

                app:layout_constraintTop_toBottomOf="@+id/habitEventDateTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/habitEventDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DATE CREATED:"
                android:gravity="center"
                android:fontFamily="@font/rubik"
                android:textSize="12dp"
                android:textColor="@color/blue"

                app:layout_constraintTop_toBottomOf="@+id/viewHabitEventTitleTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habitEventCommentLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:hint="Comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitEventDateFormatTV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habitEventCommentET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="none"
                    android:focusable="false"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toTopOf="@+id/locationChosenTV"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitEventCommentLayout"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/locationChosenTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:fontFamily="@font/rubik_bold"
                android:text="LOCATION"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/habitEventLocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="NONE"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationChosenTV"
                android:layout_marginHorizontal="24dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@color/light_gray"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/habitEventLocationTV"
                tools:layout_editor_absoluteY="375dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/habitEventImageContainerCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <ImageView
                    android:id="@+id/habitEventImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_image"
                    />
            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirmHabitEventButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/custom_rounded_square_button"
        app:elevation="10dp"
        app:icon="@drawable/ic_checkmark"
        app:iconSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/editHabitEventButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/custom_rounded_square_button"
        app:elevation="10dp"
        app:icon="@drawable/ic_edit"
        app:iconSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>