...
    <item
        android:id="@+id/todays_habits"
        android:icon="@drawable/ic_home"
        android:title="Today's Habits" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_time"
        android:title="Timeline" />

    <item
        android:id="@+id/navigation_profile"
        android:title="Profile"
...
