...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timeline.TimelineFragment">


    <ListView
        android:id="@+id/timelineListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:divider="@null"
...
