...
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/progressDisplay"
                    android:background="#00000000"
                    android:layout_alignStart="@id/habitProgressBar"
                    android:layout_alignTop="@id/habitProgressBar"
                    android:layout_alignEnd="@id/habitProgressBar"
                    android:layout_alignBottom="@id/habitProgressBar"
                    android:layout_height="match_parent"
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/habitCheckbox"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/indicator"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/habitTitleTV"
...
