...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todayHabitRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-16dp"
        android:paddingTop="24dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
...
